# Snake

./: CMakeLists.txt  README.md
include/: Snake.h  game.h  game_utils.h  resource.h
src/: Snake.cpp  game_utils.cpp  main.cpp
